<resources>
    <string name="app_name">Learn With Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="button">Button</string>
    <string name="send_me_password">Send me password</string>
    <string name="send_my_password" />
    <string name="Username" />
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="update_profile">Update Profile</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="forgotten_password_click_here">Forgotten password? Click here!</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="full_name">Full Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="oop">OOP</string>
    <string name="design_patterns">Design Patterns</string>
    <string name="data_strutures">Data Strutures</string>
    <string name="databases">Databases</string>
    <string name="alorithms">Alorithms</string>
    <string name="education">Education</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="users">Users</string>
    <string name="logout">Logout</string>
    <string name="title_activity_profile_navigation">ProfileNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_profile_navigation_drawer">ProfileNavigationDrawerActivity</string>
    <string name="menu_send">Send</string>
    <string name="my_account">My account</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="user_profle_picture">User profle picture</string>
    <string name="navigation_bar_open">Open navigation bar</string>
    <string name="navigation_bar_close">Close navigation bar</string>
    <string name="followers">Followers</string>
    <string name="chats">Chats</string>
    <string name="nrfollowing">nrfollowing</string>
    <string name="nrfollowers">nrfollowers</string>
    <string name="following">following</string>
    <string name="back">Back</string>
    <string name="search_people">Search people by topic</string>
    <string name="did_someone_forget_their_password">Did someone forget their password?</string>
    <string name="that_s_okay_just_enter_the_email_address_you_ve_used_to_register_with_and_we_ll_send_you_a_reset_link">That\'s okay... Just enter the email address you\'ve used to register with and we\'ll send you a reset link!</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_image">Forgot password image</string>
    <string name="Reputation">Reputation</string>
    <string name="reputation">reputation</string>
    <string name="cluj_napoca">Cluj Napoca</string>
    <string name="follow_me">Follow Me</string>
    <string name="romania">Romania</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="dark_mode">Dark mode:</string>
    <string name="search">Search</string>
    <string name="send_message">Send message</string>
    <string-array name="experiance_sort">
        <item>None</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="topic_names">
        <item>Algorithms</item>
        <item>Databases</item>
        <item>Data Structures</item>
        <item>Design Patterns</item>
        <item>Object-oriented programming</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="type_a_message">Type a message...</string>
    <string name="search2">Search ...</string>
    <string name="seen">seen</string>
    <string name="last_text_message">Last text message</string>
    <string name="like_me">Like me!</string>


</resources>
