<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/update_profile" />
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/chats" />
        <item
            android:id="@+id/nav_followers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/followers" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
