<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurred_background_3"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:text="@string/Username" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextCountry"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:editable="false"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editTextEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/education"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxAlorithms"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:text="@string/alorithms" />

                <Spinner
                    android:id="@+id/spinnerAlgorithms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDatabases"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:text="@string/databases" />

                <Spinner
                    android:id="@+id/spinnerDatabases"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDatastructures"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:text="@string/data_strutures" />

                <Spinner
                    android:id="@+id/spinnerDatastrutures"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxDesignPatterns"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:text="@string/design_patterns" />

                <Spinner
                    android:id="@+id/spinnerDesignPatterns"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxOop"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:text="@string/oop" />

                <Spinner
                    android:id="@+id/spinnerOop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal" />

            </LinearLayout>

            <Button
                android:id="@+id/updateProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/update_profile" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>