<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textviewclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:background="@drawable/backgroung_white_circle"
            android:gravity="center"
            android:text="X"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_popup_picture"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="-25dp"
            android:background="@drawable/user_standard_profile_picture"
            android:contentDescription="@string/user_profile_picture" />

        <TextView
            android:id="@+id/profile_popup_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:hint="@string/full_name"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_popup_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:hint="@string/email"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_popup_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:hint="@string/education"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popup_nr_of_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/popup_followers_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pofile_popup_user_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/romania"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profile_popup_user_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/cluj_napoca"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bluelight"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popup_reputation_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="0"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/popup_reputation_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reputation"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnfollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_style"
            android:text="@string/follow_me"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnsendmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/button_style"
            android:text="@string/send_message"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>